--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/athithya-dev/AIIDEClone#readme",
   "dependencies": {
-    "axios": "^1.8.3",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "ws": "^8.18.1"
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "ws": "^8.16.0",
+    "@google/generative-ai": "^0.1.0"
   }
 }
